# bendyworm

./: .gitignore  README.md
godot/: Main.gd  Main.tscn  MainEnvironment.tres  default_bus_layout.tres  project.godot  rust_gdnativelibrary.tres
godot/Fonts/: BitmapFont.fnt  BitmapFontBMConfig.bmfc  BitmapFont_0.png.import
godot/Levels/: 1bitTileset.tsx  1bitTileset.tsx.import  Level1.tscn  Level1Tilemap.tmx  Level1Tilemap.tmx.import  Level2.tscn  Level2Tilemap.tmx  Level2Tilemap.tmx.import  Level3.tscn  Level3Tilemap.tmx  Level3Tilemap.tmx.import  Level4.tscn  Level4Tilemap.tmx  Level4Tilemap.tmx.import  Level5.tscn  Level5Tilemap.tmx  Level5Tilemap.tmx.import  Level6.tscn  Level6Tilemap.tmx  Level6Tilemap.tmx.import  Level7.tscn  Level7Tilemap.tmx  Level7Tilemap.tmx.import  Level8.tscn  Level8Tilemap.tmx  Level8Tilemap.tmx.import  Level9.tscn  Level9Tilemap.tmx  Level9Tilemap.tmx.import  LevelBase.gd  LevelBase.tscn  ObjectTypes.xml  WormPathBase.gd  monochrome_tilemap_transparent_packed.png.import
godot/Music/: Credits.ogg.import  MainSong.ogg.import
godot/Shaders/: smooth_pixel_art.shader  smooth_pixel_art_3d.shader  smooth_pixel_art_3d_additive.shader
godot/Sounds/: BrainDie.wav.import  Charge.wav.import  Error.ogg.import  Jump.wav.import  PlayerDie.ogg.import  PlayerHurt.wav.import  PlayerUpgrade.ogg.import  RollerDie.wav.import  RollerShock.wav.import  ShardCollect.ogg.import  ShieldBreak.wav.import  ShootLoop.wav.import  ShootStart.ogg.import  ShootStart.wav.import  UIMove.ogg.import
rust/: Cargo.toml
rust/src/: lib.rs  path_rasterizer.rs
(+165 files in other folders)
